#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.2       XX-XX-06
#############################################################################
  - BUG FIXES 
    * Fixed a bug in the hydrogen bonding routines where PDB2PQR attempted to 
      delete an atom that had already been deleted. (thanks to Rachel Burdge)
#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.1       5-3-06
#############################################################################
  - BUG FIXES 
    * Fixed a bug which prevented PDB2PQR from recognizing atoms from nucleic 
      acids with "*" in their atom names. (thanks to Jaichen Wang)
    * Fixed a bug in the hydrogen bonding routines where a misnamed object
      led to a crash for very specific cases. (thanks to Josh Swamidass) 
#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.0       4-12-06
#############################################################################
  - NEW FEATURES
    * Structural data files have been moved to XML format.  This should make 
      it easier for users and developers to contribute to the project.
    * Added an extensions directory for small scripts.  Scripts in this 
      directory will be automatically loaded into PDB2PQR has command line
      options for post-processing, and can be easily customized.
    * Code has been greatly cleaned so as to minimize values hard-coded
      into functions and to allow greater customizability via external
      XML files.  This includes a more object-oriented hierarchy of
      structures.
    * Improved detection of the termini of chains.
    * Assign-only now does just that - only assigns parameters to atoms
      without additions, debumping, or optimizations.
    * Added a --clean command line option which does no additions,